--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Safe Heart — A Letter</title>
+  <title>E-commerce</title>
   <meta name="description" content="A responsive, animated single-file site that presents a supportive letter in Filipino with extreme animations." />
 
   <!-- Try loading GSAP from CDN -->
@@ -221,3 +221,4 @@ mahal kita like legit. hindi lang sa kung sino ka ngayon pero sa effort mo na bu
   </script>
 </body>
 </html>
+
