--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>E-commerce</title>
-  <meta name="description" content="A responsive, animated single-file site that presents a supportive letter in Filipino with extreme animations." />
+
 
   <!-- Try loading GSAP from CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -152,9 +152,9 @@
 
         <h1>Sending virtual hugs to you rn coz nasa Cavite ikaw now and Caloocan me pero soon hindi na virtual —</h1>
 
-        <p>‎alam ko na hindi ka sanay mag-open up pag may problems kasi naging defense mechanism mo na ‘yan dahil sa mga nangyari before. i get it kung minsan mas gusto mong manahimik or umiwas pero gusto ko lang sabihin na you don’t have to deal with everything alone. nandito lang ako hindi para pilitin kang mag-share pero para iparamdam na safe ka with me. kahit di ko ma-solve lahat ng issues mo gusto ko maramdaman mo na may kasama ka through the pain the silence and those moments na feeling mo wala kang kakampi.
+        <p>‎alam ko na hindi ka sanay mag-open up pag may problems kasi naging defense mechanism mo na ‘yan dahil sa mga nangyari before. i get it kung minsan mas gusto mong manahimik or umiwas pero you don’t have to deal with everything alone. nandito lang ako hindi para pilitin kang mag-share pero para iparamdam na safe ka with me. kahit di ko ma-solve lahat ng issues mo gusto ko maramdaman mo na may kasama ka through the pain the silence and those moments na feeling mo wala kang kakampi.
 
-mahal kita like legit. hindi lang sa kung sino ka ngayon pero sa effort mo na bumangon every day. i’m not the type na basta-basta nawawala pag may problema when i love i stay. alam kong trust takes time so i’ll earn it slowly but surely. gusto ko patunayan ‘yan sa actions ko hindi lang puro words kasi for me love isn’t just about kilig it’s about being loyal steady and consistent kahit mahirap or messy minsan.</p>
+mahal kita settled na ako sa'yo. hindi lang sa kung sino ka ngayon pero sa effort mo na bumangon every day. i’m not the type na basta-basta nawawala pag may problema when i love i stay. alam kong trust takes time so i’ll earn it slowly but surely. gusto ko patunayan ‘yan sa actions ko hindi lang puro words kasi for me love isn’t just about kilig it’s about being loyal steady and consistent kahit mahirap or messy minsan.</p>
 
         <button class="btn" id="showMsg">Click This</button>
       </div>
@@ -221,4 +221,5 @@ mahal kita like legit. hindi lang sa kung sino ka ngayon pero sa effort mo na bu
   </script>
 </body>
 </html>
+
 
